--- a/README
+++ b/README
@@ -1,1 +1,7 @@
-This is my first local repository!
+This is my first github repository!
+
+This is a realization for FP growth algorithm by python!
+
+If you want use the code please modify the directory of your data which is including input and ouput dir.
+
+Any help for you, my pleasure.
